Fixed nav's z-index

--- a/css/contact.css
+++ b/css/contact.css
@@ -122,6 +122,7 @@ body {
 	height: 50px;
 	width: 100%;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, .5), 0 -4px 6px rgba(0, 0, 0, .5);
+	z-index: 10;
 }
 
 /* Desktop Version */
@@ -169,7 +170,7 @@ body {
 #inline-nav a:after {
 	content: "";
 	position: absolute;
-	z-index: 1;
+	z-index: 10;
 	left: 0;
 	right: 100%;
 	bottom: -1px;
@@ -333,6 +334,7 @@ textarea {
 	margin-top: 0;
 	display: none;
 	position: absolute;
+	z-index: 1;
 }
 
 .errorMessage {
@@ -561,7 +563,7 @@ footer p {
 	}
 
 	#form {
-		width: 100%;
+		width: 90%;
 		margin: 0 auto;
 	}
 	
